vlib/v/checker/tests/option_map_or_unwrap_alias_user_clone_default_err.vv
// Only the *builtin* map clone/move produce fresh storage. A map type alias can
// define its own `clone`/`move`, which `fn.v` resolves before the map builtin, so
// `holder.m.clone()` here runs the user method that returns an alias of `holder.m`.
// The exemption must require a direct map receiver (not one that merely unaliases
// to a map), so this default keeps the map-copy guard. See vlang/v issue #27867.
type MapAlias = map[string]int

fn (m MapAlias) clone() map[string]int {
	return map[string]int(m)
}

fn maybe_none() ?map[string]int {
	return none
}

struct Holder {
mut:
	m MapAlias
}

fn main() {
	mut holder := Holder{
		m: MapAlias({
			'x': 1
		})
	}
	opt := maybe_none()
	x := opt or { holder.m.clone() }
	holder.m['x'] = 2
	println(x)
}
